--- a/src/components/MuseumCollections/MuseumCollections.module.css
+++ b/src/components/MuseumCollections/MuseumCollections.module.css
@@ -23,4 +23,5 @@
   align-items: center;
   margin-top: 49px;
   gap: 25px;
+  list-style-type: none;
 }
