--- a/src/components/PageNav/PageNav.module.css
+++ b/src/components/PageNav/PageNav.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   margin-top: 49px;
   gap: 20px;
+  text-align: center;
 }
 
 .resultsShown {
